app/styles/main.less
@import "variables";
@import "mixins";
@import "tickets";

// Global Components

body {
  overflow-x: hidden;
  .body-font;
  font-size: 16px;
}

.text-muted {
    color: @gray;
}

.text-primary {
    color: @brand-primary;
}

.text-2 {
    color: @brand-2;
}

.text-3 {
    color: @brand-3;
}

.text-4 {
    color: @brand-4;
}

img {
  max-width: 100%;
  height: auto;
}

p {
    font-size: 1em;
    line-height: 1.75;
}

p.large {
    font-size: 1.5em;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: none;
}

a {
    color: @brand-primary;
}

a:hover,
a:focus,
a:active,
a.active {
    color: darken(@brand-primary, 10%);
}

h1, h2, h3, h4, h5, h6 {
    .heading-font;
    font-weight: 700;
}

.img-centered {
    margin: 0 auto;
}

.bg-light-gray {
    background-color: @gray-lighter;
}

.bg-darkest-gray {
    background-color: @gray-darkest;
}

// Restyled Primary Buttons

.btn-primary {
    .button-variant(white; @brand-primary; @brand-primary);
    .heading-font;
    font-weight: 700;
}

.btn-xl {
    .button-variant(white; @brand-primary; @brand-primary);
    .heading-font;
    font-weight: 700;
    border-radius: 3px;
    font-size: 1.1em;
    padding: 20px 40px;
}

// Custom Navigation Bar

.navbar-default {
    background-color: @gray-darkest;
    border-color: transparent;
    .navbar-brand {
        padding: 0;
        color: @brand-primary;
        .transition(opacity 150ms);
        .opacity(0);
        .script-font;
        &:hover,
        &:focus,
        &:active,
        &.active {
            color: darken(@brand-primary, 10%);
        }
    }
    .navbar-collapse {
        border-color: fade(white, 2%);
    }
    .navbar-toggle {
        background-color: @brand-primary;
        border-color: @brand-primary;
        .icon-bar {
            background-color: white;
        }
        &:hover,
        &:focus {
            background-color: @brand-primary;
        }
    }
    .nav {
        li {
            a {
                .heading-font;
                font-weight: 400;
                letter-spacing: 1px;
                color: white;
                &:hover,
                &:focus {
                    color: @brand-primary;
                    outline: none;
                }
            }
        }
    }
    .navbar-nav > .active > a {
        border-radius: 0;
        color: white;
        background-color: @brand-primary;
    }
    .navbar-nav > .active > a:hover,
    .navbar-nav > .active > a:focus {
        color: white;
        background-color: darken(@brand-primary, 10%);
    }
}

.navbar-shrink .navbar-brand {
    .opacity(1);
}

@media (min-width: 768px) {
    .navbar-default {
        background-color: transparent;
        padding: 25px 0;
        -webkit-transition: padding 0.3s;
        -moz-transition: padding 0.3s;
        transition: padding 0.3s;
        border: none;
        .navbar-brand {
            font-size: 2em;
            -webkit-transition: all 0.3s;
            -moz-transition: all 0.3s;
            transition: all 0.3s;
        }
        .navbar-nav > .active > a {
            border-radius: 3px;
        }
    }

    .navbar-default.navbar-shrink {
        background-color: @gray-darkest;
        padding: 10px 0;
        .navbar-brand {
            font-size: 1.5em;
        }
    }
}

header {
    background-repeat: none;
    background-attachment: scroll;
    background-position: center center;
    .background-cover;
    text-align: center;
    color: white;
    .intro-text {
        padding-top: 100px;
        padding-bottom: 50px;
        .intro-lead-in {
            .serif-font;
            font-style: italic;
            font-size: 1.4em;
            line-height: 22px;
            margin-bottom: 25px;
        }
        .intro-heading {
            .heading-font;
            font-weight: 700;
            font-size: 3.1em;
            line-height: 50px;
            margin-bottom: 25px;
        }
        .intro-heading, .intro-lead-in {
            text-shadow: 0px 0px 100px @gray-darkest, 0px 0px 20px @gray-darkest;
        }
    }
    .logo {
        margin: 20px 0;
        -webkit-filter: drop-shadow(0 0 5px white);
    }
}

@media (min-width: 768px) {
    header {
        .intro-text {
            padding-top: 340px;
            padding-bottom: 200px;
            .intro-lead-in {
                .serif-font;
                font-style: italic;
                font-size: 2.5em;
                line-height: 40px;
                margin-bottom: 25px;
            }
            .intro-heading {
                .heading-font;
                font-weight: 700;
                font-size: 4.7em;
                line-height: 75px;
                margin-bottom: 50px;
            }
        }
    }
}

@import "banner";

// Global Section Styles

section {
    padding: 100px 0;
    h2.section-heading {
        font-size: 2.5em;
        margin-top: 0;
        margin-bottom: 15px;
    }
    h3.section-subheading {
        font-size: 1.1em;
        .serif-font;
        text-transform: none;
        font-style: italic;
        font-weight: 400;
        margin-bottom: 75px;
    }
}

@media (min-width: 768px) {
    section {
        padding: 150px 0;
    }
}

// Services Section

.service-heading {
    margin: 15px 0;
    text-transform: none;
}

// Portfolio Section

#speakers {
    .portfolio-item {
        margin-bottom: 60px;
        right: 0;
        .portfolio-link {
            display: block;
            position: relative;
            max-width: 400px;
            margin: 0 auto;
            .portfolio-hover {
                background: fade(@brand-primary, 90%);
                position: absolute;
                width: 100%;
                height: 100%;
                opacity: 0;
                transition: all ease 0.5s;
                -webkit-transition: all ease 0.5s;
                -moz-transition: all ease 0.5s;
                &:hover {
                    opacity: 1;
                }
                .portfolio-hover-content {
                    position: absolute;
                    width: 100%;
                    height: 20px;
                    font-size: 1.3em;
                    text-align: center;
                    top: 50%;
                    margin-top: -12px;
                    color: white;
                    i {
                        margin-top: -12px;
                    }
                    h3,
                    h4 {
                        margin: 0;
                    }
                }
            }
        }
        .portfolio-caption {
            max-width: 400px;
            margin: 0 auto;
            background-color: white;
            text-align: center;
            padding: 25px;
            h4 {
                text-transform: none;
                margin: 0;
            }
            p {
                .serif-font;
                font-style: italic;
                font-size: 1em;
                margin: 0;
            }
        }
    }
    * {
        z-index: 2;
    }
}

#hoodie {
  margin-top: 120px;
  margin-bottom: 60px;
}

@media (min-width: 992px) {
  #keynote .col-md-6 {
    margin-bottom: 120px;
  }
}

#cfp {
  padding-top: 100px;
}

@media (min-width: 767px) {
    #portfolio {
        .portfolio-item {
            margin: 0 0 30px;
        }
    }
}

#map {
  display: none;
  padding: 0;
  height: 300px;
  text-align: center;
  h2.section-heading {
    font-size: 1.3em;
  }
  h3.section-subheading {
    margin: 0;
  }
}

// @import "timeline";

// Team Section

.team-member {
    text-align: center;
    margin-bottom: 50px;
    img {
        margin: 0 auto;
        border: 7px solid white;
    }
    h4 {
        margin-top: 25px;
        margin-bottom: 0;
        text-transform: none;
    }
    p {
        margin-top: 0;
    }
}

#sponsors {
  .container > .row {
    margin-top: 60px;
  }
  h4 {
    margin-top: 20px;
  }
}

.sponsor {
  display: block;
  padding-top: 20px;

  &.free {
    min-height: 75px;
    .fa {
      width: 100%;
      line-height: 75px;
      color: transparent;
      border: 1px solid @gray-darkest;
      &:hover {
        color: @brand-primary;
        border: 1px solid @brand-primary;
      }
    }
  }

}

.biggest .sponsor.free {
  min-height: 200px;
  .fa {
    line-height: 200px;
  }
}

.big .sponsor.free {
  min-height: 100px;

  .fa {
    line-height: 100px;
  }
}

// Footer

footer {
    padding: 25px 0;
    text-align: center;
    span.copyright {
        line-height: 40px;
        .heading-font;
        text-transform: none;
    }
    ul.quicklinks {
        margin-bottom: 0;
        line-height: 40px;
        .heading-font;
        text-transform: none;
    }
}

// Social Buttons

ul.social-buttons {
    margin-top: 10px;
    margin-bottom: 0;
    li {
        a {
            display: block;
            background-color: @gray-darkest;
            height: 40px;
            width: 40px;
            border-radius: 100%;
            font-size: 1.3em;
            line-height: 40px;
            color: white;
            outline: none;
            -webkit-transition: all 0.3s;
            -moz-transition: all 0.3s;
            transition: all 0.3s;
            &:hover,
            &:focus,
            &:active {
                background-color: @brand-primary;
            }
        }
    }
}

.btn:focus,
.btn:active,
.btn.active,
.btn:active:focus {
    outline: none;
}

.portfolio-modal {
    .modal-content {
        border-radius: 0;
        background-clip: border-box;
        -webkit-box-shadow: none;
        box-shadow: none;
        border: none;
        min-height: 100%;
        padding: 100px 0;
        text-align: center;
        h2 {
            margin-bottom: 15px;
            font-size: 3em;
        }
        p {
            margin-bottom: 30px;
        }
        p.item-intro {
            margin: 20px 0 30px;
            .serif-font;
            font-style: italic;
            font-size: 1em;
        }
        ul.list-inline {
            margin-top: 0;
        }
        img {
            margin-bottom: 30px;
        }
    }
    .close-modal {
        position: absolute;
        width: 75px;
        height: 75px;
        background-color: transparent;
        top: 25px;
        right: 25px;
        cursor: pointer;
        &:hover {
            opacity: 0.3;
        }
        .lr {
            height: 75px;
            width: 1px;
            margin-left: 35px;
            background-color: @gray-darkest;
            transform: rotate(45deg);
            -ms-transform: rotate(45deg);
            /* IE 9 */
            -webkit-transform: rotate(45deg);
            /* Safari and Chrome */
            z-index: 1051;
            .rl {
                height: 75px;
                width: 1px;
                background-color: @gray-darkest;
                transform: rotate(90deg);
                -ms-transform: rotate(90deg);
                /* IE 9 */
                -webkit-transform: rotate(90deg);
                /* Safari and Chrome */
                z-index: 1052;
            }
        }
    }
}

// Highlight Color Customization

::-moz-selection {
    text-shadow: none;
    background: @brand-primary;
}

::selection {
    text-shadow: none;
    background: @brand-primary;
}

img::selection {
    background: transparent;
}

img::-moz-selection {
    background: transparent;
}

body {
    webkit-tap-highlight-color: @brand-primary;
}

footer {
    .list-inline {
        margin: 20px 0;
    }
}

@media (min-width: 768px) and(max-width: 992px) {
  .navbar-brand {
    display: none;
  }
}

.fluid-width-video-wrapper {
  width: 100%;
  position: relative;
  padding: 0;
  padding-top: 56.25%;
  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
  }
}

@import "fonts";

